feat: add style.css file and connect into index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sammi Aldhi Yanto</title>
-    <link href="./output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./output.css" />
   </head>
   <body>
     <h1 class="text-3xl font-bold underline">Hello world!</h1>
