--- a/index.html
+++ b/index.html
@@ -8,6 +8,73 @@
     <link rel="stylesheet" href="./output.css" />
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <div class="my-container">
+      <header class="max-w-screen-lg m-auto">
+        <section class="personal-info">
+          <img
+            src="./images/sammi.jpg"
+            alt="profile"
+            class="object-cover w-32 h-32 transition duration-200 rounded-full hover:opacity-75 ring ring-teal-300 ring-opacity-60 hover:shadow-lg hover:cursor-pointer hover:ring hover:ring-purple-500"
+          />
+
+          <h1
+            class="text-3xl font-bold leading-9 tracking-tight text-center text-teal-200 my-name mt-7 sm:text-4xl sm:leading-10 md:text-4xl lg:text-5xl md:leading-14"
+          >
+            Sammi Aldhi Yanto
+          </h1>
+          <div
+            class="py-2 text-lg leading-7 text-pink-300 sm:py-3 sm:mt-2 lg:mt-4 my-roles"
+          >
+            <span
+              ><svg
+                stroke="currentColor"
+                fill="currentColor"
+                stroke-width="0"
+                viewBox="0 0 448 512"
+                height="0.8em"
+                width="1em"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M325.4 289.2L224 390.6 122.6 289.2C54 295.3 0 352.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-70.2-54-127.1-122.6-133.2zM32 192c27.3 0 51.8-11.5 69.2-29.7 15.1 53.9 64 93.7 122.8 93.7 70.7 0 128-57.3 128-128S294.7 0 224 0c-50.4 0-93.6 29.4-114.5 71.8C92.1 47.8 64 32 32 32c0 33.4 17.1 62.8 43.1 80-26 17.2-43.1 46.6-43.1 80zm144-96h96c17.7 0 32 14.3 32 32H144c0-17.7 14.3-32 32-32z"
+                ></path></svg
+            ></span>
+            <span> Student •</span>
+            <span> Educator •</span>
+            <span> Software Engineer</span>
+          </div>
+
+          <p
+            class="mt-10 text-lg leading-7 text-justify text-teal-400 sm:mt-2 first-letter:text-3xl"
+          >
+            Haii ⚜ Salam kenal yaa, Saya sekarang sedang menempuh jenjang
+            pendidikan S1 ⚘
+            <a
+              href="#"
+              class="text-blue-400 transition duration-300 hover:text-pink-400"
+              aria-label="channel-youtube"
+              >Universitas Riau</a
+            >
+            dengan jurusan ✿ Ilmu Komputer. Saya agak susah diam, biasanya
+            berpikir,
+            <i>explore</i> hal baru ❀, atau sekedar <i>sharing</i> sesuatu di ❂
+            <a
+              href="#"
+              class="text-blue-400 transition duration-300 hover:text-pink-400"
+              aria-label="channel-youtube"
+              >Youtube</a
+            >, kebanyakan tentang pemrograman, ❃ algoritma & struktur data,
+            <i>DevOps</i>, dan tugas kuliah. Saat ini saya sedang mendalami
+            tentang ☘ <i>DevOps</i>, <i>Cloud Computing</i>, dan
+            <a
+              href="https://go.dev/"
+              class="text-blue-400 transition duration-300 hover:text-pink-400"
+              aria-label="channel-youtube"
+              >Go</a
+            >
+          </p>
+        </section>
+      </header>
+    </div>
   </body>
 </html>
