--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
     <link rel="stylesheet" href="./output.css" />
   </head>
   <body>
+    <!-- to top -->
+    <div class="fixed bottom-0 right-0 hidden m-10 lg:block md:block">
+      <a href="#">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          class="w-12 h-12 text-purple-600 cursor-pointer md:w-14 md:h-14 lg:w-16 lg:h-16 hover:text-pink-600 hover:animate-none animate-bounce"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm.53 5.47a.75.75 0 00-1.06 0l-3 3a.75.75 0 101.06 1.06l1.72-1.72v5.69a.75.75 0 001.5 0v-5.69l1.72 1.72a.75.75 0 101.06-1.06l-3-3z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </a>
+    </div>
+
+    <!-- end to top -->
+    
     <div class="my-container">
+      <div class="container max-w-full px-4 -y-4">
       <header class="max-w-screen-lg m-auto">
         <section class="personal-info">
           <img
@@ -45,7 +66,7 @@
           </div>
 
           <p
-            class="mt-10 text-lg leading-7 text-justify text-teal-400 sm:mt-2 first-letter:text-3xl"
+            class="mt-10 text-lg leading-7 text-justify text-teal-400 sm:mt-2 first-letter:text-3xl my-desc"
           >
             Haii ⚜ Salam kenal yaa, Saya sekarang sedang menempuh jenjang
             pendidikan S1 ⚘
