--- a/index.html
+++ b/index.html
@@ -95,23 +95,17 @@
       const myBio = document.querySelector('.my-bio')
       const myBioext = `Keep Learning, Keep Growing, and Keep Sharing 🌲`
 
-      // typing effect
       const typeWriter = (text, element) => {
         let i = 0
         const type = () => {
           if (i < text.length) {
             element.innerHTML += text.charAt(i)
             i++
-            setTimeout(type, randomSpeed())
+            setTimeout(type, Math.floor(Math.random() * 100))
           }
         }
         type()
       }
-
-      function randomSpeed() {
-        return Math.floor(Math.random() * 100)
-      }
-
       typeWriter(myBioext, myBio)
     </script>
   </body>
