feat: repair responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <span> Student • Software Engineer</span>
             </div>
 
-            <span class="text-lg my-bio">
+            <span class="text-lg tracking-wider text-center my-bio">
               <!-- using JS -->
             </span>
 
