feat: repair responsive

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
                 aria-label="channel-youtube"
                 >Universitas Riau</a
               >
-              dengan jurusan ⚜ Ilmu Komputer. Saya agak susah diam, biasanya
-              berpikir,
+              dengan jurusan ⚜ Ilmu Komputer. Hobi saya
               <i>explore</i> hal baru ❀, atau sekedar <i>sharing</i> sesuatu di
               ❂
               <a
@@ -68,7 +67,7 @@
                 class="text-blue-400 transition duration-300 hover:text-pink-400"
                 aria-label="channel-youtube"
                 >Go</a
-              >
+              >.
             </p>
           </section>
         </header>
