--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="my-container">
       <div class="container max-w-full px-4 -y-4">
         <header class="max-w-screen-lg m-auto">
-          <section class="min-w-full personal-info">
+          <section class="min-w-full" id="personal-info">
             <img
               src="./images/sammi.jpg"
               alt="profile"
@@ -31,7 +31,7 @@
             </div>
 
             <span class="text-lg tracking-wider text-center my-bio">
-              <!-- using JS -->
+              <!-- Typed using JS -->
             </span>
 
             <hr
@@ -61,7 +61,7 @@
                 >Youtube</a
               >, kebanyakan tentang pemrograman, ❃ algoritma & struktur data,
               <i>DevOps</i>, dan tugas kuliah. Saat ini saya sedang mendalami
-              tentang ☘ <i>DevOps</i>, <i>Cloud Computing</i>, dan
+              tentang ☘ <i>DevOps</i>, <i>Cloud Computing</i>, <i>OSS</i> dan
               <a
                 href="https://go.dev/"
                 class="text-blue-400 transition duration-300 hover:text-pink-400"
@@ -71,6 +71,274 @@
             </p>
           </section>
         </header>
+
+        <main class="max-w-screen-lg m-auto">
+          <h1 class="text-2xl font-bold">Edukasi</h1>
+          <section id="edukasi" class="py-5">
+            <div>
+              <h2 class="text-pink-300">SMAN 1 Talamau</h2>
+              <p class="pt-2 text-sm">Pendidikan Formal</p>
+              <p class="text-sm italic text-purple-400">2017 - 2020</p>
+            </div>
+            <div>
+              <h2 class="text-lg font-semibold text-pink-300 md:text-red">
+                Universitas Riau
+              </h2>
+              <p class="pt-2 text-sm">Pendidikan Formal</p>
+              <p class="text-sm italic text-purple-400">2020 - Sekarang</p>
+            </div>
+            <div>
+              <h2 class="text-lg font-semibold text-pink-300">
+                Hacktiv8 • Scalable Web Service With Golang X Kominfo
+              </h2>
+              <p class="pt-2 text-sm">Pelatihan</p>
+              <p class="text-sm italic text-purple-400">2022 - Sekarang</p>
+            </div>
+            <div>
+              <h2 class="text-lg font-semibold text-pink-300">
+                Ruangguru Camp • Backend Engineering
+              </h2>
+              <p class="pt-2 text-sm">Studi Independen • Kampus Merdeka</p>
+              <p class="text-sm italic text-purple-400">2022 - Sekarang</p>
+            </div>
+          </section>
+
+          <section id="portfolio">
+            <h1 class="py-5 text-2xl font-bold">Portfolio</h1>
+            <div
+              class="grid content-center grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4"
+            >
+              <!-- card 1 -->
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/fiber-shortener"
+                      target="_blank"
+                      class="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Fiber Shortener</a
+                    >
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                    A web-based application that is useful for shortening
+                    website urls.
+                  </p>
+                </div>
+              </div>
+              <!-- end card 1 -->
+
+              <!-- card 2 -->
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 010 3.75H5.625a1.875 1.875 0 010-3.75z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/todo-app-go"
+                      target="_blank"
+                      class="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Todo App</a
+                    >
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                    A very simple application for managing to-do lists.
+                  </p>
+                </div>
+              </div>
+              <!-- end card 2 -->
+
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M21 7.5l-2.25-1.313M21 7.5v2.25m0-2.25l-2.25 1.313M3 7.5l2.25-1.313M3 7.5l2.25 1.313M3 7.5v2.25m9 3l2.25-1.313M12 12.75l-2.25-1.313M12 12.75V15m0 6.75l2.25-1.313M12 21.75V19.5m0 2.25l-2.25-1.313m0-16.875L12 2.25l2.25 1.313M21 14.25v2.25l-2.25 1.313m-13.5 0L3 16.5v-2.25"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/go-design-patterns"
+                      target="_blank"
+                      class="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Go Design Pattern
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                    Design patterns impl using go.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M15.75 15.75V18m-7.5-6.75h.008v.008H8.25v-.008zm0 2.25h.008v.008H8.25V13.5zm0 2.25h.008v.008H8.25v-.008zm0 2.25h.008v.008H8.25V18zm2.498-6.75h.007v.008h-.007v-.008zm0 2.25h.007v.008h-.007V13.5zm0 2.25h.007v.008h-.007v-.008zm0 2.25h.007v.008h-.007V18zm2.504-6.75h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V13.5zm0 2.25h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V18zm2.498-6.75h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V13.5zM8.25 6h7.5v2.25h-7.5V6zM12 2.25c-1.892 0-3.758.11-5.593.322C5.307 2.7 4.5 3.65 4.5 4.757V19.5a2.25 2.25 0 002.25 2.25h10.5a2.25 2.25 0 002.25-2.25V4.757c0-1.108-.806-2.057-1.907-2.185A48.507 48.507 0 0012 2.25z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/postfix-calculator"
+                      target="_blank"
+                      class="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Postfix Calculator
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                    Postix calculator build using go.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.361-6.867 8.21 8.21 0 003 2.48z"
+                    />
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 18a3.75 3.75 0 00.495-7.467 5.99 5.99 0 00-1.925 3.546 5.974 5.974 0 01-2.133-1A3.75 3.75 0 0012 18z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/fiber-go-blog-api"
+                      target="_blank"
+                      class="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Fiber Go Blog API
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                    A simple blog api build using fiber go.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/"
+                      target="_blank"
+                      s="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Lainnya ...
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                    Lainnya tersedia di github.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+        </main>
       </div>
     </div>
 
