feat: add a litle bit design

--- a/index.html
+++ b/index.html
@@ -34,13 +34,27 @@
               <!-- Typed using JS -->
             </span>
 
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class=""
+              viewBox="0 0 16 16 text-red-200"
+            >
+              <path
+                d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM7 6.5C7 5.672 6.552 5 6 5s-1 .672-1 1.5S5.448 8 6 8s1-.672 1-1.5zM4.285 9.567a.5.5 0 0 0-.183.683A4.498 4.498 0 0 0 8 12.5a4.5 4.5 0 0 0 3.898-2.25.5.5 0 1 0-.866-.5A3.498 3.498 0 0 1 8 11.5a3.498 3.498 0 0 1-3.032-1.75.5.5 0 0 0-.683-.183zm5.152-3.31a.5.5 0 0 0-.874.486c.33.595.958 1.007 1.687 1.007.73 0 1.356-.412 1.687-1.007a.5.5 0 0 0-.874-.486.934.934 0 0 1-.813.493.934.934 0 0 1-.813-.493z"
+              />
+            </svg>
+
+            <!-- 
             <hr
               class="duration-500 border-blue-500 cursor-pointer border-1 hover:border-red-500"
               width="20px"
-            />
+            /> -->
 
             <p
-              class="py-5 text-lg leading-7 text-justify text-teal-400 sm:mt-2 first-letter:text-3xl my-desc"
+              class="py-5 text-lg leading-7 text-justify text-purple-400 sm:mt-2 first-letter:text-3xl my-desc"
             >
               Haii ✿ Salam kenal, Nama saya <b>Sammi Aldhi Yanto</b>, biasa
               dipanggil <b>Sam</b>. Saya sekarang sedang menempuh jenjang
@@ -66,8 +80,8 @@
                 href="https://go.dev/"
                 class="text-blue-400 transition duration-300 hover:text-pink-400"
                 aria-label="channel-youtube"
-                >Go</a
-              >.
+                >Go, TypeScript, Rust, Zig,dan Carbon.</a
+              >
             </p>
           </section>
         </header>
@@ -97,7 +111,7 @@
             class="duration-500 border-blue-500 cursor-pointer border-1 hover:border-red-500"
             width="20px"
           />
-          <section id="edukasi" class="py-5">
+          <section id="edukasi" class="py-10">
             <div>
               <h2 class="text-lg font-semibold text-pink-300 md:text-red">
                 SMAN 1 Talamau
@@ -121,7 +135,7 @@
             </div>
             <div>
               <h2 class="text-lg font-semibold text-pink-300">
-                Ruangguru Camp • Backend Engineering
+                Ruangguru • Backend Engineering
               </h2>
               <p class="pt-2 text-sm">Studi Independen • Kampus Merdeka</p>
               <p class="text-sm italic text-purple-400">2022 - Sekarang</p>
@@ -148,7 +162,7 @@
             class="duration-500 border-blue-500 cursor-pointer border-1 hover:border-red-500"
             width="20px"
           />
-          <section id="pengalaman" class="py-5">
+          <section id="pengalaman" class="py-10">
             <div>
               <h2 class="text-lg font-semibold text-pink-300 md:text-red">
                 Prodi SI & MI Universitas Riau
@@ -221,7 +235,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-12 h-12 text-white"
+                    class="w-12 h-12 text-pink-300"
                   >
                     <path
                       stroke-linecap="round"
@@ -240,7 +254,7 @@
                       Fiber Shortener</a
                     >
                   </h2>
-                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
                     A web-based application that is useful for shortening
                     website urls.
                   </p>
@@ -261,7 +275,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-12 h-12 text-white"
+                    class="w-12 h-12 text-pink-300"
                   >
                     <path
                       stroke-linecap="round"
@@ -280,7 +294,7 @@
                       Todo App</a
                     >
                   </h2>
-                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
                     A very simple application for managing to-do lists.
                   </p>
                 </div>
@@ -299,7 +313,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-12 h-12 text-white"
+                    class="w-12 h-12 text-pink-300"
                   >
                     <path
                       stroke-linecap="round"
@@ -318,7 +332,7 @@
                       Go Design Pattern
                     </a>
                   </h2>
-                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
                     Design patterns impl using go.
                   </p>
                 </div>
@@ -335,7 +349,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-12 h-12 text-white"
+                    class="w-12 h-12 text-pink-300"
                   >
                     <path
                       stroke-linecap="round"
@@ -354,7 +368,7 @@
                       Postfix Calculator
                     </a>
                   </h2>
-                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
                     Postix calculator build using go.
                   </p>
                 </div>
@@ -371,7 +385,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-12 h-12 text-white"
+                    class="w-12 h-12 text-pink-300"
                   >
                     <path
                       stroke-linecap="round"
@@ -395,7 +409,7 @@
                       Fiber Go Blog API
                     </a>
                   </h2>
-                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
                     A simple blog api build using fiber go.
                   </p>
                 </div>
@@ -412,7 +426,7 @@
                     viewBox="0 0 24 24"
                     stroke-width="1.5"
                     stroke="currentColor"
-                    class="w-12 h-12 text-white"
+                    class="w-12 h-12 text-pink-300"
                   >
                     <path
                       stroke-linecap="round"
@@ -431,7 +445,7 @@
                       Lainnya ...
                     </a>
                   </h2>
-                  <p class="mt-2 text-sm leading-5 text-teal-400">
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
                     Lainnya tersedia di github.
                   </p>
                 </div>
@@ -440,8 +454,8 @@
           </section>
         </main>
 
-        <footer class="mt-18">
-          <div class="max-w-5xl px-4 py-16 mx-auto sm:px-6 lg:px-8">
+        <footer class="mt-8">
+          <div class="max-w-5xl px-4 py-8 mx-auto sm:px-6 lg:px-8">
             <ul class="flex justify-center gap-2 mt-6 md:gap-2">
               <li>
                 <a
@@ -545,10 +559,28 @@
               </li>
             </ul>
 
+            <hr
+              class="m-auto mt-8 duration-500 border-blue-200 cursor-pointer border-1 hover:border-red-500"
+              width="10px"
+            />
+
             <p
-              class="max-w-md mx-auto mt-6 font-sans font-semibold tracking-tight text-center text-teal-600"
+              id="today"
+              class="max-w-md mx-auto mt-4 font-sans text-sm italic tracking-tight text-center text-white"
+            >
+              <!-- with js -->
+            </p>
+
+            <p
+              class="max-w-md mx-auto mt-2 font-sans font-semibold tracking-widest text-center text-transparent bg-clip-text bg-gradient-to-r from-purple-300 to-pink-700"
             >
               Sammi Aldhi Yanto
+            </p>
+
+            <p
+              class="max-w-md mx-auto mt-8 font-sans text-sm tracking-widest text-center text-transparent bg-clip-text bg-gradient-to-r from-purple-200 to-pink-200"
+            >
+              &copy; 2022
             </p>
           </div>
         </footer>
@@ -556,6 +588,10 @@
     </div>
 
     <script>
+      const today = document.getElementById('today')
+      const day = new Date().toLocaleString('en-us', {weekday: 'long'})
+      today.innerHTML = `Happy <b>${day}</b>`
+
       const myBio = document.querySelector('.my-bio')
       const myBioext = `Keep Learning, Keep Growing, and Keep Sharing`
 
@@ -565,7 +601,7 @@
           if (i < text.length) {
             element.innerHTML += text.charAt(i)
             i++
-            setTimeout(type, Math.floor(Math.random() * 100))
+            setTimeout(type, Math.floor(Math.random() * 150))
           }
         }
         type()
