feat: add portoflio

--- a/index.html
+++ b/index.html
@@ -431,6 +431,42 @@
                     <path
                       stroke-linecap="round"
                       stroke-linejoin="round"
+                      d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/fiber-shortener"
+                      target="_blank"
+                      class="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Go Queue
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
+                    queuing implementation in Go with generic
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-pink-300"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
                       d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
                     />
                   </svg>
@@ -438,16 +474,221 @@
                 <div class="mt-4 text-center">
                   <h2 class="text-lg font-medium leading-6 text-white">
                     <a
-                      href="https://github.com/SemmiDev/"
+                      href="https://github.com/SemmiDev/flutter-crud-cloud-firestore"
                       target="_blank"
                       s="hover:text-pink-400 hover:transition hover:duration-300"
                     >
-                      Lainnya ...
+                      Flutter CRUD
                     </a>
                   </h2>
                   <p class="mt-2 text-sm leading-5 text-purple-400">
-                    Lainnya tersedia di github.
+                    Simple app crud using flutter.
                   </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-pink-300"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/app"
+                      target="_blank"
+                      s="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      CRUD PHP Native
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
+                    CRUD PHP PSIBW course final project for college.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-pink-300"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/todo-app-grpc"
+                      target="_blank"
+                      s="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Todo App GRPC
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
+                    demonstrate a fully fledged fullstack application built with
+                    golang/grpc including CRUD operations, authentication,
+                    routing, pagination, and more.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-pink-300"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/knapsack"
+                      target="_blank"
+                      s="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Knapsack
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
+                    Knapsack using Go.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-pink-300"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/Closest-Pair-Points"
+                      target="_blank"
+                      s="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Closest pair of points
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
+                    DnC vs Brute Force using java.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-pink-300"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                    />
+                  </svg>
+                </div>
+                <div class="mt-4 text-center">
+                  <h2 class="text-lg font-medium leading-6 text-white">
+                    <a
+                      href="https://github.com/SemmiDev/Nugaz"
+                      target="_blank"
+                      s="hover:text-pink-400 hover:transition hover:duration-300"
+                    >
+                      Time management
+                    </a>
+                  </h2>
+                  <p class="mt-2 text-sm leading-5 text-purple-400">
+                    Eisenhower's Urgent/Important Principle Using Time
+                    Effectively, Not Just Efficiently.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col items-center justify-center p-4 shadow-lg rounded-3xl bg-slate-800"
+              >
+                <div
+                  class="flex items-center justify-center w-24 h-24 rounded-full bg-slate-800"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-12 h-12 text-pink-300"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                    />
+                  </svg>
                 </div>
               </div>
             </div>
