--- a/index.html
+++ b/index.html
@@ -65,9 +65,14 @@
                 aria-label="channel-youtube"
                 >Universitas Riau</a
               >
-              dengan jurusan ⚜ Ilmu Komputer. Hobi saya
-              <i>explore</i> hal baru ❀, atau sekedar <i>sharing</i> sesuatu di
-              ❂
+              dengan jurusan ⚜ Ilmu Komputer.
+              <i
+                >I likes coding for my like as a hobby and like that's kind of
+                how i got into coding when i was start studying on the college,
+                besides that</i
+              >
+              saya juga suka <i>explore</i> hal baru ❀, atau sekedar
+              <i>sharing</i> sesuatu di ❂
               <a
                 href="#"
                 class="text-blue-400 transition duration-300 hover:text-pink-400"
@@ -80,7 +85,7 @@
                 href="https://go.dev/"
                 class="text-blue-400 transition duration-300 hover:text-pink-400"
                 aria-label="channel-youtube"
-                >Go, TypeScript, Rust, Zig,dan Carbon.</a
+                >Go, TypeScript, dan Carbon.</a
               >
             </p>
           </section>
